# ros_object_keypoint_msgs

./: CMakeLists.txt  package.xml
msg/: KeyPoint.msg  ObjectKeyPointArray.msg  ObjectKeyPoints.msg
